--- a/resources/controls.css
+++ b/resources/controls.css
@@ -1,22 +1,20 @@
 /*
 @font-face {
-    src: url("/cur/c.ttf");
-    -fx-font-family: "Chancery Cursive";
-    -fx-font-size: 14;
+    src: url("path/to/font.ttf");
 }
+-fx-font-family: "Font name";
 */
+
 
 .carbon-button {
     -fx-background-insets: 50,0,80,0;
-    -fx-background-image: url("carbon.png");
 }
 
 .toggle-camera {
     -fx-background-insets: 0, 0, 0, 0;
-    -fx-padding: 0;
-    -fx-background-image: url("footer_lodyasSDark.png");
-    -fx-graphic: url("Documentary-32.png");
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-padding: 0, 0, 0, 0;
+    -fx-background-image: url("ui/texture/footer_lodyasSDark.png");
+    -fx-graphic: url("ui/tabs/Camera-50.png");
     -fx-background-color:
         radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
     -fx-text-fill: white;
@@ -25,10 +23,10 @@
 
 .toggle-camera:selected {
     -fx-background-insets: 0, 0, 0, 0;
-    -fx-padding: 0;
-    -fx-background-image: url("footer_lodyasSLight.png");
-    -fx-graphic: url("Documentary-32i.png");
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-padding: 0, 0, 0, 0;
+    -fx-background-image: url("ui/texture/footer_lodyasSLight.png");
+    -fx-graphic: url("ui/tabs/Camera-50i.png");
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 0 );
     -fx-background-color:
         radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
     -fx-text-fill: black;
@@ -37,10 +35,9 @@
 
 .toggle-map {
     -fx-background-insets: 0, 0, 0, 0;
-    -fx-padding: 0;
-    -fx-background-image: url("footer_lodyasSDark.png");
-    -fx-graphic: url("Adventures-32.png");
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-padding: 0, 0, 0, 0;
+    -fx-background-image: url("ui/texture/footer_lodyasSDark.png");
+    -fx-graphic: url("ui/tabs/Adventures-50.png");
     -fx-background-color:
         radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
     -fx-text-fill: white;
@@ -49,10 +46,11 @@
 
 .toggle-map:selected {
     -fx-background-insets: 0, 0, 0, 0;
-    -fx-padding: 0;
-    -fx-background-image: url("footer_lodyasSLight.png");
-    -fx-graphic: url("Adventures-32i.png");
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-padding: 0, 0, 0, 0;
+    -fx-background-image: url("ui/texture/footer_lodyasSLight.png");
+    -fx-graphic: url("ui/tabs/Adventures-50i.png");
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 0 );
+
     -fx-background-color:
         radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
     -fx-text-fill: black;
@@ -61,10 +59,9 @@
 
 .toggle-debug {
     -fx-background-insets: 0, 0, 0, 0;
-    -fx-padding: 0;
-    -fx-background-image: url("footer_lodyasSDark.png");
-    -fx-graphic: url("Bug-32.png");
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-padding: 0, 0, 0, 0;
+    -fx-background-image: url("ui/texture/footer_lodyasSDark.png");
+    -fx-graphic: url("ui/tabs/Bug-50.png");
     -fx-background-color:
         radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
     -fx-text-fill: white;
@@ -73,10 +70,10 @@
 
 .toggle-debug:selected {
     -fx-background-insets: 0, 0, 0, 0;
-    -fx-padding: 0;
-    -fx-background-image: url("footer_lodyasSLight.png");
-    -fx-graphic: url("Bug-32i.png");
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-padding: 0, 0, 0, 0;
+    -fx-background-image: url("ui/texture/footer_lodyasSLight.png");
+    -fx-graphic: url("ui/tabs/Bug-50i.png");
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 0 );
     -fx-background-color:
         radial-gradient(center 50% 0%, radius 100%, rgba(114,131,148,0.9), rgba(255,255,255,0));
     -fx-text-fill: black;
@@ -86,20 +83,24 @@
 .toggle-switch {
     -fx-background-insets: 0, 0, 0, 0;
     -fx-padding: 0;
-    -fx-graphic: url("Refresh-50.png");
+    -fx-graphic: url("ui/video/Refresh-50.png");
     -fx-background-color: transparent;
 }
 
 .toggle-record {
     -fx-background-insets: 0, 0, 0, 0;
     -fx-padding: 0;
-    -fx-graphic: url("Aperture-50.png");
+    -fx-graphic: url("ui/video/Aperture-50.png");
     -fx-background-color: transparent;
 }
 
 .video-background {
-    -fx-background-image: url("burrow.jpg");
+    -fx-background-image: url("ui/demo/burrow.jpg");
     -fx-background-size: cover;
+}
+
+.text-facing {
+    -fx-graphic: url("ui/video/Facing-Fwd.png");
 }
 
 .split-pane *.split-pane-divider {
