--- a/resources/controls.css
+++ b/resources/controls.css
@@ -103,6 +103,43 @@
     -fx-graphic: url("ui/video/Facing-Fwd.png");
 }
 
+.toolbox {
+    -fx-background-insets: 0, 0, 0, 0;
+    -fx-padding: 5;
+    -fx-background-image: url("ui/texture/footer_lodyasSDark.png");
+}
+
+.htoolbox {
+    -fx-background-insets: 0, 0, 0, 0;
+    -fx-padding: 0;
+    -fx-background-image: url("ui/texture/footer_lodyasSDark.png");
+}
+
+.tool-label {
+    -fx-text-fill: black;
+    -fx-font-weight: bold;
+    -fx-font-size: 14;
+}
+
+.tool-item {
+    -fx-background-image: url("ui/texture/footer_lodyasSLight.png");
+}
+
+.tool-item-box {
+    -fx-background-insets: 0;
+    -fx-padding: 5;
+    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 0 );
+    -fx-background-image: url("ui/texture/footer_lodyasSLight.png");
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
+
+.tool-button {
+    -fx-padding: 10;
+    -fx-background-image: url("ui/texture/footer_lodyasSDark.png");
+    -fx-text-fill: white;
+}
+
 .split-pane *.split-pane-divider {
    -fx-padding: 0 1 0 1;
    -fx-border-color:  transparent;
