--- a/resources/controls.css
+++ b/resources/controls.css
@@ -115,6 +115,13 @@
     -fx-background-color: transparent;
 }
 
+.video-battery-quarter {
+    -fx-background-insets: 0, 0, 0, 0;
+    -fx-padding: 0;
+    -fx-graphic: url("ui/video/Battery-Half-52.png");
+    -fx-background-color: transparent;
+}
+
 .video-battery-half {
     -fx-background-insets: 0, 0, 0, 0;
     -fx-padding: 0;
