--- a/resources/controls.css
+++ b/resources/controls.css
@@ -259,3 +259,17 @@
     -fx-font-style: italic;
     -fx-font-size: 11;
 }
+
+.tool-slider .track {
+    -fx-background-image: url("ui/texture/footer_lodyasSDark.png");
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+}
+
+.tool-slider .thumb {
+    -fx-background-image: url("ui/texture/footer_lodyasSLight.png");
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 2, 0 ,0 ,0 );
+    -fx-border-color: black;
+}
